// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar should match the snapshot on desktop 1`] = `
<nav
  class="sc-blHHSb bTLhyn"
>
  <a
    aria-current="page"
    class="sc-gtLWhw fSWOOJ active"
    href="/"
  >
    Markt
  </a>
</nav>
`;

exports[`Navbar should match the snapshot on mobile 1`] = `
<nav
  class="sc-blHHSb bTLhyn"
>
  <a
    aria-current="page"
    class="sc-gtLWhw fSWOOJ active"
    href="/"
  >
    Markt
  </a>
  <div
    class="sc-ghWlax eVoPrc"
    data-testid="hamburger"
  >
    <span />
    <span />
    <span />
  </div>
  <div
    class="sc-ixGGxD bReSGM"
    data-testid="backdrop"
  />
</nav>
`;
